# CWSDK

./: CMakeLists.txt  CMakeSettings.json  GenerateVtablePadding.py  MakeCWModsCMake.py  README.md  cwsdk.cpp  cwsdk.h
common/: BytesIO.cpp  RGBA.cpp  Vector2.cpp  Vector3.cpp  math.h
cube/: AI.cpp  AI.h  AdaptionWidget.h  BaseWidget.cpp  BaseWidget.h  BlockProperties.cpp  BlockProperties.h  CharacterPreviewWidget.h  CharacterStyleWidget.h  ChatWidget.h  Client.cpp  Controls.cpp  Controls.h  ControlsWidget.h  Creature.cpp  Creature.h  Database.cpp  Field.cpp  Field.h  FormulaDetailsWidget.h  GUI.cpp  GUI.h  Game.cpp  Game.h  HelpWidget.h  Host.h  Interaction.cpp  Interaction.h  InventoryWidget.h  Item.cpp  Item.h  MapOverlayWidget.h  MultiplayerWidget.h  Music.h  Options.cpp  Options.h  OptionsWidget.h  PreviewWidget.h  Projectile.h  QuestionWidget.h  (+27 more)
cwmods/: CMakeLists.txt  MakeCWModsCMake.py  VtablePadding.h  cwmods.cpp  cwmods.h  cwsdk.cpp  cwsdk.h
cwmods/IDA/: types.h
cwmods/common/: ByteRGBA.cpp  ByteRGBA.h  BytesIO.h  ColorRGB.cpp  ColorRGB.h  DoubleVector3.cpp  DoubleVector3.h  FloatRGBA.cpp  FloatRGBA.h  FloatVector2.cpp  FloatVector2.h  FloatVector3.cpp  FloatVector3.h  IntVector2.cpp  IntVector2.h  IntVector3.cpp  IntVector3.h  LongVector3.cpp  LongVector3.h  Matrix4.cpp  Matrix4.h  RGBA.h  Vector2.h  Vector3.h  math.cpp  types.h
cwmods/cube/: AI.h  AdaptionWidget.h  BaseWidget.cpp  BaseWidget.h  Block.cpp  Block.h  BlockProperties.h  CharacterWidget.h  ChatWidget.cpp  ChatWidget.h  Client.cpp  Client.h  Connection.cpp  Connection.h  Controls.cpp  Creature.cpp  Creature.h  Database.h  EnchantWidget.h  Equipment.cpp  Equipment.h  Field.h  FloatColor.cpp  FloatColor.h  FormulaDetailsWidget.h  GUI.cpp  GUI.h  Game.cpp  Game.h  GameController.cpp  GameController.h  HelpWidget.h  Host.cpp  Host.h  InventoryWidget.h  Item.h  ItemStack.cpp  ItemStack.h  MapOverlayWidget.h  MultiplayerWidget.h  (+30 more)
cwmods/gfx/: Chunk.cpp  Chunk.h  ChunkBuffer.h  D3D11Graphics.h  D3D11IndexBuffer.cpp  D3D11IndexBuffer.h  D3D11Renderer.cpp  D3D11Renderer.h  D3D11VertexBuffer.h  Graphics.h  IndexBuffer.h  Renderer.cpp  VertexBuffer.cpp  VertexBuffer.h
cwmods/msvc/: _Thrd_t.cpp  _Thrd_t.h  allocator.cpp  allocator.h  list.cpp  list.h  string.cpp  string.h  vector.h  wstring.cpp  wstring.h
cwmods/plasma/: Array.h  Attribute.cpp  Attribute.h  ContinuousAttribute.cpp  ContinuousAttribute.h  D3D11Engine.cpp  DiscreteAttribute.cpp  DiscreteAttribute.h  Display.cpp  Display.h  Engine.cpp  Engine.h  FontEngine.cpp  FontEngine.h  Matrix.cpp  NamedObject.cpp  Node.cpp  Node.h  Object.h  ScalableFont.h  Transformation.h  Vector.h  Widget.cpp  Widget.h
cwmods/steam/: CSteamID.cpp  CSteamID.h  EBeginAuthResult.cpp  EBeginAuthResult.h  EP2PSend.cpp  EP2PSend.h  ESNetSocketConnectionType.cpp  ESNetSocketConnectionType.h  EUserHasLicenseForAppResult.cpp  EUserHasLicenseForAppResult.h  EVoiceResult.cpp  EVoiceResult.h  ISteamNetworking.cpp  ISteamNetworking.h  ISteamUser.cpp  ISteamUser.h  P2PSessionState_t.cpp  P2PSessionState_t.h  SNetListenSocket_t.cpp  SNetListenSocket_t.h  SNetSocket_t.cpp  SNetSocket_t.h  steam_api_interop.cs
gfx/: Chunk.cpp  Chunk.h  ChunkBuffer.cpp  ChunkBuffer.h  D3D11Graphics.cpp  D3D11Graphics.h  D3D11IndexBuffer.h  D3D11Renderer.cpp  D3D11Renderer.h  D3D11VertexBuffer.cpp  D3D11VertexBuffer.h  Graphics.cpp  Graphics.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.h  VertexBuffer.h
msvc/: _Thrd_t.cpp  _Thrd_t.h
plasma/: Array.cpp  Attribute.h  ContinuousAttribute.h  D3D11Engine.h  Engine.h  FontEngine.cpp  Keyable.cpp  Keyable.h  Matrix.cpp  Matrix.h  NamedObject.h  Node.h  Object.h  ObjectManager.cpp  ObjectManager.h  ScalableFont.cpp  ScalableFont.h  Transformation.cpp  Transformation.h  Widget.h
steam/: isteamnetworkingsockets.h
